--- a/genrenator_uv/pyproject.toml
+++ b/genrenator_uv/pyproject.toml
@@ -9,3 +9,11 @@ dependencies = [
     "mistune>=3.0.2",
     "quart>=0.19.6",
 ]
+
+[tool.uv]
+dev-dependencies = [
+    "black>=24.8.0",
+    "pytest-asyncio>=0.24.0",
+    "pytest>=8.3.3",
+    "ruff>=0.6.4",
+]
